--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Asakusa Edo Inn">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,26 +19,41 @@
 
 <body>
 
-<header>
-    <div class="topnav" id="myTopnav">
-        <div class="logo-div">
-            <img class="logoAsakusa" src="img/logoasakusa.png" alt="Logo Asakusa">
+    <div class="container"></div>
+    <header>
+
+        <div class="topnav" id="myTopnav">
+            <div class="logo-div">
+                <img class="logoAsakusa" src="img/logoasakusa.png" alt="Logo Asakusa">
+            </div>
+            <a href="javascript:void(0);" class="icon" id="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+            <div class="nav-links">
+                <a href="#home">Home</a>
+                <a href="#login">Login</a>
+            </div>
         </div>
-        <a href="javascript:void(0);" class="icon" id="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
-        <div class="nav-links">
-            <a href="#home">Home</a>
-            <a href="#login">Login</a>            
+    </header>
+
+
+
+    <br><br><br><br><br><br>
+    <br><br><br><br><br><br>
+    <br><br><br><br><br><br>
+    <br><br><br><br><br><br>
+
+
+
+    <footer>
+        <div class="socialMedia">
+            <a href="https://www.instagram.com"><img src="img/logoInsta.png" alt="instagram logo"></a>
+            <a href="https://www.facebook.com"><img src="img/logoFB.png" alt="facebook logo"></a>
+            <a href="http://www.whatsapp.com"><img src="img/logoWhats.png" alt="whatsapp logo"></a>
         </div>
+    </footer>
+
     </div>
-</header>
-
-    
-
-    
-
-
 
 </body>
 
