--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="css/Carosel.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/logoasakusa.png" type="image/x-icon">
     <title>Asakusa Edo Inn</title>
@@ -19,7 +20,7 @@
 
 <body>
 
-    <div class="container"></div>
+    <div class="container">
     <header>
 
         <div class="topnav" id="myTopnav">
@@ -35,6 +36,37 @@
             </div>
         </div>
     </header>
+
+    <div class="w3-content w3-display-container" style="max-width:800px">
+        <!-- Slides individuais -->
+        <div class="mySlides">
+            <img src="img/Hall.png" style="width:100%">
+        </div>
+        <div class="mySlides">
+            <img src="img/Quarto1.png" style="width:100%">
+        </div>
+        <div class="mySlides">
+            <img src="img/Quarto2.png" style="width:100%">
+        </div>
+        <div class="mySlides">
+            <img src="img/Quarto3.png" style="width:100%">
+        </div>
+    
+        <!-- Indicadores e controles do slideshow -->
+        <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
+            <!-- Botão para slide anterior -->
+            <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+            <!-- Botão para próximo slide -->
+            <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+            <!-- Indicadores de slide -->
+            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
+        </div>
+    </div>
+    
+    <script src="js/Carosel.js"></script>
 
 
 
