--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </a>
             <div class="nav-links">
                 <a href="#home">Home</a>
-                <a href="#login">Login</a>
+                <a href="tela login/index.html">Login</a>
             </div>
         </div>
     </header>
