--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </header>
 
-    <div class="w3-content w3-display-container" style="max-width:800px">
+    <div class="w3-content w3-display-container">
         <!-- Slides individuais -->
         <div class="mySlides">
             <img src="img/Hall.png" style="width:100%">
