--- a/index.html
+++ b/index.html
@@ -59,10 +59,12 @@
             <!-- Botão para próximo slide -->
             <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
             <!-- Indicadores de slide -->
-            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
-            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
-            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
-            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
+        <div class="bolinhas">
+            <span class="w3-badge demo w3-border  w3-hover-white" onclick="currentDiv(1)"></span>
+            <span class="w3-badge demo w3-border  w3-hover-white" onclick="currentDiv(2)"></span>
+            <span class="w3-badge demo w3-border  w3-hover-white" onclick="currentDiv(3)"></span>
+            <span class="w3-badge demo w3-border  w3-hover-white" onclick="currentDiv(4)"></span>
+        </div>
         </div>
     </div>
     
