--- a/tela-cadastro/index.html
+++ b/tela-cadastro/index.html
@@ -19,14 +19,14 @@
      <header>
         <div class="topnav" id="myTopnav">
             <div class="logo-div">
-                <img class="logoAsakusa" src="img/logoasakusa.png" alt="Logo Asakusa">
+                <a href="../index.html"><img class="logoAsakusa" src="img/logoasakusa.png" alt="Logo Asakusa"></a>
             </div>
             <a href="javascript:void(0);" class="icon" id="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
             <div class="nav-links">
-                <a href="#home">Home</a>
-                <a href="#login">Login</a>
+                <a href="../index.html">Home</a>
+                <a href="../tela-login/index.html">Login</a>
             </div>
         </div>
     </header>
@@ -43,9 +43,9 @@
     </div>
 
     <footer class="footer">
-        <a class="rede" href="instagram.com"><img src="img/insta.png" alt="instagram logo"></a>
-        <a class="rede" href="facebook.com"><img src="img/fb.png" alt="facebook logo"></a>
-        <a class="rede" href="whatsapp.com"><img src="img/whats.png" alt="whatsapp logo"></a>
+        <a class="rede" target="_blank" href="instagram.com"><img src="img/insta.png" alt="instagram logo"></a>
+        <a class="rede" target="_blank" href="facebook.com"><img src="img/fb.png" alt="facebook logo"></a>
+        <a class="rede" target="_blank" href="whatsapp.com"><img src="img/whats.png" alt="whatsapp logo"></a>
     </footer>
 
     <script src="js/script.js"></script>
