--- a/tela-login/index.html
+++ b/tela-login/index.html
@@ -21,14 +21,14 @@
 
         <div class="topnav" id="myTopnav">
             <div class="logo-div">
-                <img class="logoAsakusa" src="img/logoasakusa.png" alt="Logo Asakusa">
+                <a href="../index.html"><img class="logoAsakusa" src="img/logoasakusa.png" alt="Logo Asakusa"></a>
             </div>
             <a href="javascript:void(0);" class="icon" id="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
             <div class="nav-links">
-                <a href="#home">Home</a>
-                <a href="#login">Login</a>
+                <a href="../index.html">Home</a>
+                <a href="../tela-login/index.html">Login</a>
             </div>
         </div>
     </header>
@@ -45,14 +45,14 @@
         <input type="password" id="Senha" name="Senha" placeholder="Senha" required>
         <div class="botoes">
             <button type="submit">Logar</button>
-            <button>Cadastrar</button>
+            <a href="tela-cadastro/index.html"><button>Cadastrar</button></a>
         </div>
     </form>
 
     <footer class="footer">
-        <a class="rede" href="instagram.com"><img src="img/insta.png" alt="instagram logo"></a>
-        <a class="rede" href="facebook.com"><img src="img/fb.png" alt="facebook logo"></a>
-        <a class="rede" href="whatsapp.com"><img src="img/whats.png" alt="whatsapp logo"></a>
+        <a class="rede" target="_blank" href="instagram.com"><img src="img/insta.png" alt="instagram logo"></a>
+        <a class="rede" target="_blank" href="facebook.com"><img src="img/fb.png" alt="facebook logo"></a>
+        <a class="rede" target="_blank" href="whatsapp.com"><img src="img/whats.png" alt="whatsapp logo"></a>
     </footer>
 
     <script src="js/script.js"></script>
