--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/Carosel.css">
+    <link rel="stylesheet" href="css/carrossel.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/logoasakusa.png" type="image/x-icon">
     <title>Asakusa Edo Inn</title>
@@ -19,13 +19,13 @@
 </head>
 
 <body>
-    <div class="concon">
-
+    <div class="full-width-container">
         <header>
-
             <div class="topnav" id="myTopnav">
                 <div class="logo-div">
-                    <img class="logoAsakusa" src="img/logoasakusa.png" alt="Logo Asakusa">
+                    <a href="index.html">
+                        <img class="logoAsakusa" src="img/logoasakusa.png" alt="Logo Asakusa">
+                    </a>
                 </div>
                 <a href="javascript:void(0);" class="icon" id="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
@@ -71,7 +71,7 @@
                 </div>
             </div>
 
-            <script src="js/Carosel.js"></script>
+            <script src="js/carrossel.js"></script>
 
         </div>
 
@@ -81,6 +81,9 @@
                 <img class="infoFoto1" src="img/i-hotel.png" alt="imagem do hotel estilo oriental">
 
                 <img class="molduraVertical" src="img/molduraVertical.png" alt="fundo imagem de moldura tema oriental">
+
+                <img class="molduraHorizontal" src="img/molduraHorizontal.png"
+                    alt="fundo imagem de moldura tema oriental">
 
                 <div class="text-overlay">
                     <p>Bem-vindo ao Asakusa Edo, onde a tradição japonesa ganha vida! Experimente apresentações
@@ -93,8 +96,55 @@
         </div>
         <!-- FIM INFORMACOES INFO1 -->
 
-    </div>
+        <!-- INFORMACOES INFO2 -->
 
+        <div id="info2" class="container">
+            <img class="iLinha1" src="img/i-caligrafia.png" alt="imagem com escrita em caligrafia japonesa">
+
+            <img class="moldHori" src="img/molduraHorizontal.png" alt="fundo imagem de moldura tema oriental">
+
+            <p>Descubra a arte de aprender kanji enquanto se hospeda conosco! Em nosso hotel, oferecemos aulas de kanji
+                interativas e envolventes como parte de nossas atividades exclusivas. Mergulhe na riqueza cultural do
+                Japão e transforme sua estadia em uma experiência enriquecedora e inesquecível.</p>
+        </div>
+        <!-- FIM INFORMACOES INFO2 -->
+
+        <div id="info3" class="container">
+
+            <img class="moldHori" src="img/molduraHorizontal.png" alt="fundo imagem de moldura tema oriental">
+
+            <p>Desfrute de apresentações exclusivas de peças típicas japonesas em nosso hotel, incluindo cerâmica de
+                Arita e arte do origami. Uma experiência cultural inesquecível que enriquece sua estadia!</p>
+
+            <img class="iLinha1" src="img/i-teatro.png" alt="imagem teatro japonesa">
+        </div>
+
+        <div id="sobre" class="container">
+            <h1>SOBRE NÓS</h1>
+            <p>
+                No Asakusa Edo, oferecemos uma experiência única que celebra a rica herança cultural do Japão.
+                Localizado no vibrante bairro de Asakusa, nosso hotel combina o conforto moderno com o charme histórico,
+                proporcionando uma estadia memorável e imersiva.
+                Nosso compromisso é destacar as tradições japonesas através de atividades exclusivas, como apresentações
+                de cerâmica de Arita e sessões de origami, criando uma conexão genuína com a cultura local. Com um
+                atendimento atencioso e ambientes elegantemente decorados, o Asakusa Edo é o lugar perfeito para
+                explorar e desfrutar do espírito autêntico do Japão.
+            </p>
+
+        </div>
+
+        <div id="checkin" class="container">
+
+            <img class="moldHori2" src="img/molduraHorizontal.png" alt="fundo imagem de moldura tema oriental">
+
+            <h1>CHECK-IN</h1>
+            <p>Faça sua reserva hoje e experimente a combinação perfeita de tradição e conforto!</p>
+
+            <button>CHECK-IN</button>
+
+        </div>
+
+    </div>
 
     <footer>
         <div class="socialMedia">
@@ -103,8 +153,6 @@
             <a href="http://www.whatsapp.com"><img src="img/logoWhats.png" alt="whatsapp logo"></a>
         </div>
     </footer>
-
-
 
 </body>
 
