arrumado botão, adcionado hover nos botoes

--- a/tela-cadastro/index.html
+++ b/tela-cadastro/index.html
@@ -39,7 +39,7 @@
         <input placeholder="Data de Nascimento" class="textbox-n" type="text" onfocus="(this.type='date')" onblur="(this.type='text')" id="date" />
         <input type="number" id="CPF" placeholder="CPF">
         <input type="number" id="telefone" placeholder="Telefone">
-        <input type="submit" value="Cadastrar">
+        <input class="botao" type="submit" value="Cadastrar">
     </div>
 
     <footer class="footer">
