--- a/tela-login/index.html
+++ b/tela-login/index.html
@@ -45,7 +45,7 @@
         <input type="password" id="Senha" name="Senha" placeholder="Senha" required>
         <div class="botoes">
             <button type="submit">Logar</button>
-            <a href="tela-cadastro/index.html"><button>Cadastrar</button></a>
+            <a href="../tela-cadastro/index.html"><button type="button">Cadastrar</button></a>
         </div>
     </form>
 
